# speculator_ev_engine

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
speculator_ev_engine/: __init__.py
speculator_ev_engine/core/: __init__.py  bankroll.py  distributions.py  ev.py  kelly.py
speculator_ev_engine/decisions/: __init__.py  calibration.py  leaks.py  logger.py  review.py
speculator_ev_engine/markets/: __init__.py  arbitrage.py  options.py  portfolio.py  risk.py
speculator_ev_engine/notebooks/: bankroll_simulation.ipynb  clv_analysis.ipynb  icm_vs_chipev.ipynb  kelly_deep_dive.ipynb
speculator_ev_engine/pipelines/: __init__.py  data_feeds.py  storage.py
speculator_ev_engine/pipelines/scrapers/: __init__.py
speculator_ev_engine/poker/: __init__.py  exploitative.py  gto.py  hand_equity.py  icm.py  session.py
speculator_ev_engine/sports/: __init__.py  backtest.py  edge.py  market.py  odds.py
speculator_ev_engine/sports/models/: __init__.py  base_model.py  ensemble.py  regression.py
speculator_ev_engine/ui/core/: __init__.py  formatters.py  themes.py
speculator_ev_engine/ui/core/charts/: __init__.py  bankroll_charts.py  decision_charts.py  icm_charts.py  kelly_charts.py  sports_charts.py
speculator_ev_engine/ui/jupyter/: __init__.py  decisions.ipynb  icm.ipynb  kelly.ipynb  sports.ipynb
speculator_ev_engine/ui/tui/: app.py
speculator_ev_engine/ui/tui/screens/: __init__.py  decisions.py  icm.py  kelly.py  sports.py
speculator_ev_engine/ui/tui/widgets/: __init__.py
speculator_ev_engine/ui/web/: app.py
speculator_ev_engine/ui/web/routes/: decisions.py  icm.py  kelly.py  sports.py
speculator_ev_engine/ui/web/static/: app.js  index.html  style.css
tests/: test_bankroll.py  test_calibration.py  test_distributions.py  test_edge.py  test_ev.py  test_icm.py  test_kelly.py  test_leaks.py  test_logger.py  test_odds.py
