[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speculator-ev-engine"
version = "0.1.0"
description = "EV-maximizing framework for poker, sports betting, and financial markets"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "jupyter>=1.0",
    "notebook>=7.0",
    "ipywidgets>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["speculator_ev_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
