[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speculator-ev-engine"
version = "0.1.0"
description = "EV-maximizing framework for poker, sports betting, and financial markets"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "jupyter>=1.0",
    "notebook>=7.0",
    "ipywidgets>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
ui-jupyter = [
    "ipywidgets>=8.0",
    "jupyter>=1.0",
    "notebook>=7.0",
]
ui-web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
ui-tui = [
    "textual>=0.60",
    "rich>=13.0",
]
ui-all = [
    "speculator-ev-engine[ui-jupyter,ui-web,ui-tui]",
]

[project.scripts]
seve-tui = "speculator_ev_engine.ui.tui.app:main"
seve-web = "speculator_ev_engine.ui.web.app:main"

[tool.setuptools.packages.find]
include = ["speculator_ev_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
